import { Vehiculo } from "./vehiculo";


export default class Compacto extends Vehiculo {

    
}